[package]
name = "knurl"
version = "0.1.1"
edition = "2024"
description = "Elm-inspired TUI for embedded pixel displays - OLED, TFT"
license = "MIT OR Apache-2.0"
repository = "https://github.com/okislitsin/knurl"
readme = "../README.md"
keywords = ["embedded", "tui", "display", "no-std"]
categories = ["embedded", "no-std"]

[features]
default = []
graphics = ["knurl-graphics"]

[dependencies]
knurl-core     = { path = "../knurl-core", version = "0.1.1" }
knurl-graphics = { path = "../knurl-graphics", version = "0.1.1", optional = true }
